# oao

./: CMakeLists.txt  README.md  gdb.sh  macrun.sh  run.sh  tests.sh  tests_build.sh
Source/: Constants.h  Effect  EffectsPage.h  FMOperator.h  FMVoice.cpp  FMVoice.h  MatrixPage.h  OAOColors.h  OAOLookAndFeel.h  OperatorsPage.h  Oscilloscope.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBar.h  SettingsPage.h  SynthEffect.h  SynthFilter.h  WaveTable.h
Tests/: OAOTests.cpp
presets/2.0.2/: 35_Majestic_Strings.xml  36_Tape_Echo.xml  46_Laser_Tom.xml  chiptune_lead.xml  circuit.xml  clear wavering heart.xml  comb_piano.xml  dial tone.xml  echo_pluck.xml  formant.xml  glass shudder.xml  juney_attempt.xml  juney_attempt_2.xml  kick.xml  lip trill.xml  metal shriek.xml  old_tapewarmth.xml  quiet_techno_kick.xml  rich_pad.xml  rich_sine.xml  ring_stab.xml  ringing pad.xml  sand shuffle.xml  scattered beauty.xml  shiver.xml  squeaky harp door.xml  strange_choir.xml  strong pwm chord.xml  strong pwm.xml  tonal_kick.xml  wavering heart.xml  weird noise.xml  yo_ya.xml
presets/ai_generated/: 01_Init.xml  02_Warm_Pad.xml  03_Classic_Bell.xml  04_Brass_Lead.xml  05_Sub_Bass.xml  06_Electric_Piano.xml  07_Additive_Strings.xml  08_Growl_Bass.xml  09_Dreamy_Pad.xml  10_Pluck.xml  11_LoFi_Keys.xml  12_Organ.xml  13_Metallic_Bells.xml  14_Granular_Texture.xml  15_Punchy_Lead.xml  16_Ambient_Shimmer.xml  17_Wobble_Bass.xml  18_Glitch_Pad.xml  19_Choir.xml  20_RingMod_Stab.xml  21_Tape_Warmth.xml  22_Hard_Sync_Lead.xml  23_Ethnic_Pluck.xml  24_PWM_Pad.xml  25_Vocal_Synth.xml  26_Deep_Space.xml  27_Comb_Lead.xml  28_Jungle_Bass.xml  29_Glass_Marimba.xml  30_Techno_Kick.xml  31_Reverse_Pad.xml  32_Chiptune_Lead.xml  33_Evolving_Texture.xml  34_Acid_Bass.xml  35_Majestic_Strings.xml  36_Tape_Echo.xml  37_Crystal_Arp.xml  38_Sitar.xml  39_Noise_Sweep.xml  40_Thick_Supersaw.xml  (+11 more)
presets/ai_presets/: Acid Squelch.xml  Alien Texture.xml  Ambient Shimmer Wash.xml  Bell EP.xml  Brass Section.xml  Chiptune Square Lead.xml  Church Organ.xml  Classic EP.xml  Classic FM Bell.xml  Dark Drone Pad.xml  Dark Temple Bell.xml  Deep Sine Bass.xml  Dirty Crunch Bass.xml  Drawbar Organ.xml  Evolving FM Pad.xml  FM Punch Bass.xml  FM Screamer Lead.xml  Feedback Growl Lead.xml  Ghost Choir Pad.xml  Glass Pad.xml  Glass Pluck.xml  Gong Wash.xml  Granular Cloud.xml  Gritty Rock Organ.xml  Hard Saw Lead.xml  Koto Pluck.xml  Marimba Pluck.xml  Metallic Clangor.xml  Metallic Edge Lead.xml  Music Box Pad.xml  PWM Synth Lead.xml  Plucky Sub Bass.xml  Reese Growl.xml  Ring Mod Alarm.xml  Scatter Glitch.xml  Slow Analog Swell.xml  Soft Celesta.xml  Soft Flute Lead.xml  Sub Wobble.xml  Supersaw Lead.xml  (+11 more)
presets/synth/: a little aged.xml  additive breath.xml  big drama.xml  clank.xml  creaky door.xml  creepy dial tone.xml  drum1.xml  frozen xylophone.xml  hihat_1.xml  hit.xml  metal fwoosh.xml  metal screech.xml  metal shriek.xml  roll.xml  sound tom.xml  spoooooky.xml  static in the machine.xml  tonal_kick.xml  weird cymbol.xml
